--- a/CSS/components/mainStart.css
+++ b/CSS/components/mainStart.css
@@ -1,4 +1,8 @@
 .container1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin-top: 0;
     position: relative;
 }
